<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/vert_1"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_logo_wtht_leaf">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        android:orientation="vertical"
        android:layout_height="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/Informatio_p6"
            android:textSize="45sp"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/gris"
            android:textColor="@color/black"
            android:inputType="number"
            android:text="@string/num_rue"
            android:textSize="29sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/activity_vertical_margin" />
        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/gris"
            android:textColor="@color/black"
            android:inputType="textPostalAddress"
            android:text="@string/nom_rue"
            android:textSize="29sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/editTextCodePostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/gris"
            android:inputType="text|number"
            android:text="@string/Code_Postal"
            android:textColor="@color/black"
            android:textSize="29sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/activity_vertical_margin" />
        <EditText
            android:id="@+id/editTextVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gris"
            android:textAlignment="center"
            android:textSize="29sp"
            android:inputType="text"
            android:text="@string/Ville"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_vertical_margin"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/vert_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>